[package]
name = "ggoled_app"
version = "0.1.0"
edition = "2021"

[dependencies]
ggoled_lib = { path = "../ggoled_lib" }
ggoled_draw = { path = "../ggoled_draw" }

image = { version = "*" }
chrono = "*"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "*"
directories = "*"
rfd = "*"
tao = "0.34.5"
tray-icon = { version = "0.21.3", default-features = false }
ctrlc = { version = "3", features = ["termination"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Media_Control"] }
windows-sys = { version = "0.61.2", features = ["Win32_System_SystemInformation", "Win32_System_Console", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Registry"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.27"

[target.'cfg(target_os = "linux")'.dependencies]
mpris = "2"
system-idle-time = "1.0.4"

[target.'cfg(target_os = "macos")'.dependencies]
auto-launch = "0.6"
block2 = "0.6"
dispatch2 = "0.2"
objc2 = "0.6"
objc2-core-foundation = "0.3.2"
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSNotification", "NSOperation", "NSString", "block2"] }
system-idle-time = "1.0.4"
core-foundation = "0.10.1"
core-graphics = "0.24.0"
